# college_football_elo

./: .gitignore  Pipfile  pyproject.toml  requirements.txt  test.py
data/: games2010.csv  games2011.csv  games2012.csv  games2013.csv  games2014.csv  games2015.csv  games2016.csv  games2017.csv  games2018.csv  games2019.csv  games2020.csv  rankings.csv  recruiting2016.csv  recruiting2017.csv  recruiting2018.csv  teams.csv
src/: SessionState.py  data.py  elo.py  main.py
